// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Exchange reducer should change currency for exchange 1`] = `
Object {
  "currencyFrom": "EUR",
  "currencyTo": "EUR",
  "input": null,
  "output": null,
}
`;

exports[`Exchange reducer should change currency for exchange 2`] = `
Object {
  "currencyFrom": "GBP",
  "currencyTo": "EUR",
  "input": null,
  "output": null,
}
`;

exports[`Exchange reducer should change currency for exchange to 1`] = `
Object {
  "currencyFrom": "USD",
  "currencyTo": "GBP",
  "input": null,
  "output": null,
}
`;

exports[`Exchange reducer should change currency for exchange to 2`] = `
Object {
  "currencyFrom": "USD",
  "currencyTo": "USD",
  "input": null,
  "output": null,
}
`;

exports[`Exchange reducer should return initial state 1`] = `
Object {
  "currencyFrom": "USD",
  "currencyTo": "EUR",
  "input": null,
  "output": null,
}
`;
